--- a/webservice/backend/src/main/resources/public/common.css
+++ b/webservice/backend/src/main/resources/public/common.css
@@ -6,7 +6,7 @@
     --background-color: rgba(204, 207, 204, 0.72);
     --border-color-light: #aaa;
     --width-max-content: calc(100% - 10rem);
-    --text-on-background-color: #dddddd;
+    --text-on-background-color: #2c2c2c;
     --light-background-color-transparent: rgba(31, 31, 12, .5);
     --label-text-color: #626262;
     font-size: 14pt;
@@ -48,7 +48,7 @@ span[role="button"]:hover {
     padding: 2em;
     border: .2em solid darkred;
     margin: 2em;
-    background-color: #777777;
+    background-color: var(--background-color);
     max-height: 40em;
     overflow-y: auto;
 }
@@ -57,15 +57,19 @@ span[role="button"]:hover {
     margin-top: .5em;
 }
 
+#footer{
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+    background-color: var(--background-color);
+}
+
+#footer:hover{
+    background-color: var(--light-background-color-transparent);
+}
+
 .bubblyBackground {
     background: url("background.png") no-repeat center center fixed;
     background-size: cover;
 }
 
-.navigation_links {
-    width: 100%;
-    padding-top: 2rem;
-    padding-bottom: 2rem;
-    margin-left: 3em;
-    font-size: 2em;
-}
