--- a/webservice/backend/src/main/resources/public/common.css
+++ b/webservice/backend/src/main/resources/public/common.css
@@ -9,6 +9,7 @@
     --text-on-background-color: #2c2c2c;
     --light-background-color-transparent: rgba(31, 31, 12, .5);
     --label-text-color: #626262;
+    --input-grafient: linear-gradient(144deg, rgba(246, 246, 255, 1) 0%, rgba(255, 255, 230, 1) 100%);
     font-size: 14pt;
 }
 
