--- a/webservice/frontend/src/index.less
+++ b/webservice/frontend/src/index.less
@@ -1,5 +1,5 @@
 body {
-    background-image: url(./pouring.jpg);
+    background-image: url(/pouring.jpg);
     background-size: cover;
     color: whitesmoke;
 }
