--- a/webservice/backend/src/main/resources/public/index.css
+++ b/webservice/backend/src/main/resources/public/index.css
@@ -1,37 +1,48 @@
 @import url("common.css");
 
-.beerTable_wrapper {
-    width: var(--width-max-content);
-    position: relative;
-    padding: 1rem;
-    border: solid var(--border-color-light);
-    min-height: 100vh;
+:root {
+    --width-of-countrySelector: 7rem;
+    --height-of-row: 2em;
+    --row-color-0: #e6eeff;
+    --row-color-1: #f7faff;
+    --row-color-2: #a7aed1;
+    --text-color: #333;
 }
 
 .beerTable {
-    width: 100%;
-    color: #000000;
+    width: calc(100vw - var(--mainContent-side-margin) - var(--mainContent-side-margin) - var(--width-of-countrySelector));
     table-layout: fixed;
+    font-size: 1.5rem;
+    color: var(--text-color);
 }
 
 .beerTable th {
     font-weight: bold;
-    background-color: #bbb;
+    background-color: var(--row-color-0);
     text-align: center;
-    border-bottom: .2em solid #111;
+    vertical-align: middle;
+    border-bottom: .2em solid var(--row-color-1);
     padding: .2em;
+    font-family: "Roboto medium";
 }
 
 .beerTable tr {
-    background-color: var(--background-color);
+    background-color: var(--row-color-0);
+    height: var(--height-of-row);
+    font-family: "Roboto thin";
 }
 
 .beerTable tr:nth-child(odd) {
-    background-color: #ddd;
+    background-color: var(--row-color-1);
 }
 
 .beerTable td {
     padding: .2em;
+    vertical-align: middle;
+}
+
+.beerTable td:nth-child(1) {
+    font-family: "Roboto light";
 }
 
 .beerTable tr td:first-child {
@@ -42,18 +53,41 @@
     padding-right: 1em;
 }
 
+.beerTable tr:hover {
+    background-color: var(--row-color-2);
+}
+
+.beerTable a {
+    text-decoration: none;
+    color: var(--text-color);
+}
+
+.column_wide {
+    min-width: 10em;
+    text-align: left;
+}
+.column_medium {
+    min-width: 7em;
+    text-align: left;
+}
+.column_narrow {
+    width: 4em;
+    text-align: center;
+}
+
 .filter_fieldset {
-    border: solid var(--border-color-light);
+    border: solid var(--row-color-2);
     padding: 1rem;
     margin-bottom: 2rem;
-    width: var(--width-max-content);
-    color: var(--text-on-background-color);
+    width: calc(100vw - var(--mainContent-side-margin) - var(--mainContent-side-margin) - var(--width-of-countrySelector));
     position: relative;
+    box-sizing: border-box;
+    height: 4.2rem;
 }
 
 .filter_fieldset legend {
-    color: var(--header-font-color);
-    font-family: var(--header-font-family);
+    color: var(--label-text-color);
+    font-family: var(--font-labels);
     font-weight: bold;
     padding-left: .5rem;
     padding-right: .5rem;
@@ -66,7 +100,7 @@
 
 .filter_label {
     font-size: .7em;
-    font-family: var(--header-font-family);
+    font-family: var(--font-labels);
     color: var(--label-text-color);
     position: relative;
     bottom: 1.2em;
@@ -78,20 +112,24 @@
     height: 1.2em;
     position: absolute;
     left: 0;
-    top: 1.4em;
+    top: 0.5em;
+    font-size: 1.3rem;
+}
+
+.reset_button {
+    text-decoration: underline;
 }
 
 #filter_country_label {
     position: absolute;
-    right: -5em;
+    right: -9em;
     top: 9em;
 }
 
 #filter_country {
     height: 100vh;
     top: 2em;
-    width: 7rem;
-    color: var(--text-on-background-color);
+    width: var(--width-of-countrySelector);
     background-color: transparent;
     border: none;
     position: absolute;
