--- a/webservice/backend/src/main/resources/public/details.css
+++ b/webservice/backend/src/main/resources/public/details.css
@@ -1,10 +1,5 @@
 @import url("common.css");
 
-
-.mainContent {
-    line-height: 1.5em;
-}
-
 .beer_info_group{
     display: flex;
     flex-direction: column;
@@ -22,20 +17,20 @@
 
 .beer_label {
     color: var(--label-text-color);
-    font-style: italic;
+    font-family: var(--font-labels);
+    width: 6em;
     text-align: right;
-    width: 10em;
     margin-right: .2em;
     display: inline-block;
 }
 
 .beer_info {
-    color: var(--text-on-background-color);
+    font-family: "Roboto medium";
 }
 
 .beer_image_main {
     max-width: 30vw;
-    border: 1px solid var(--border-color-light);
+    border: 2px solid var(--label-text-color);
     float: right;
     margin-left: 1em;
     margin-bottom: 1em;
@@ -43,17 +38,11 @@
 
 .country_flag {
     display: inline-block;
-    max-height: 32px;
-    font-size: 0;
+    max-height: 64px;
 }
 
 #wikipedia_content {
     padding: 2rem;
     font-size: smaller;
-}
-
-.navigation_links {
-    width: 100%;
-    padding: 1rem 3rem 1rem 3rem;
-    font-size: 2em;
+    line-height: 1.2em;
 }
