--- a/webservice/backend/src/main/resources/public/styles/common.css
+++ b/webservice/backend/src/main/resources/public/styles/common.css
@@ -1,5 +1,5 @@
 @import url("reset.css");
-@import url("fonts/fonts.css");
+@import url("../fonts/fonts.css");
 
 :root {
     --background-color: #DDD;
@@ -106,7 +106,7 @@ html {
 }
 
 .earth_background {
-    background-image: url(earth.png);
+    background-image: url(../images/earth.png);
     background-repeat: no-repeat;
     background-position: bottom;
     background-attachment: fixed;
