--- a/webservice/frontend/src/styles/errorPanel.less
+++ b/webservice/frontend/src/styles/errorPanel.less
@@ -7,15 +7,15 @@
   position: relative;
   color: @error_message_color;
   font-weight: bold;
-  padding: 2em;
+  padding: 1em 2em;
   border: .2em solid darkred;
-  margin: 2em 1em 2em 1em;
+  margin: 1em 1em 2em 1em;
   background-color: @error_background_color;
   max-height: 40em;
   overflow-y: auto;
 
   .error_message {
-    margin-top: .5em;
+    margin-bottom: .5em;
   }
 
   .error_panel_close_button {
